--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
     <title>WebStudio</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
         integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="./scss/main.css">
+    <link rel="stylesheet" href="./css/main.min.css">
 </head>
 
 <body>
@@ -72,7 +72,7 @@
                             позиції.
                         </p>
                     </li>
-                    <li class="work-list">
+                    <li class="work__list">
                         <div class="work__preview">
                             <svg class="work__icon">
                                 <use href="./images/sprite.svg#icon-clock" width="66px" height="70px"></use>
@@ -83,7 +83,7 @@
                             себе.
                         </p>
                     </li>
-                    <li class="work-list">
+                    <li class="work__list">
                         <div class="work__preview">
                             <svg class="work__icon">
                                 <use href="./images/sprite.svg#icon-diagram" width="70px" height="70px"></use>
@@ -92,7 +92,7 @@
                         <h3 class="work__title">ПЛАНУВАННЯ</h3>
                         <p class="work__text">Так само консультація з широким активом значною мірою зумовлює.</p>
                     </li>
-                    <li class="work-list">
+                    <li class="work__list">
                         <div class="work__preview">
                             <svg class="work__icon">
                                 <use href="./images/sprite.svg#icon-astronaut" width="67px" height="70px"></use>
