--- a/index.html
+++ b/index.html
@@ -106,8 +106,8 @@
                 </ul>
             </div>
         </section>
-        <section class="interest">
-            <div class="container examples">
+        <section class="examples section-paddings">
+            <div class="container">
                 <h2 class="examples__title">Чим ми займаємося</h2>
                 <ul class="examples__list">
                     <li class="examples__item"><img src="./images/direction1.jpg" alt="напрям один" width="370">
