--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                 <ul class="team__item">
                     <li class="team__list">
 
-                        <img src="./images/igor.jpg" alt="перший член команди" width="270">
+                        <img class="team__img" src="./images/igor.jpg" alt="перший член команди">
                         <div class="team__descr">
                             <h3 class="team__name">Ігор Дем'яненко</h3>
                             <p class="team__profession" lang="en">Product Designer</p>
@@ -170,7 +170,7 @@
                         </div>
                     </li>
                     <li class="team__list">
-                        <img src="./images/olga.jpg" alt="другий член команди" width="270">
+                        <img class="team__img" src="./images/olga.jpg" alt="другий член команди">
                         <div class="team__descr">
                             <h3 class="team__name">Ольга Рєпіна</h3>
                             <p class="team__profession">Frontend Developer</p>
@@ -211,7 +211,7 @@
                         </div>
                     </li>
                     <li class="team__list">
-                        <img src="./images/mykola.jpg" alt="третій член команди" width="270">
+                        <img class="team__img" src="./images/mykola.jpg" alt="третій член команди">
                         <div class="team__descr">
                             <h3 class="team__name">Микола Тарасов</h3>
                             <p class="team__profession" lang="en">Marketing</p>
@@ -252,7 +252,7 @@
                         </div>
                     </li>
                     <li class="team__list">
-                        <img src="./images/mykhailo.jpg" alt="четвертий член команди" width="270">
+                        <img class="team__img" src="./images/mykhailo.jpg" alt="четвертий член команди">
                         <div class="team__descr">
                             <h3 class="team__name">Михайло Єрмаков</h3>
                             <p class="team__profession" lang="en">UI Designer</p>
