--- a/index.html
+++ b/index.html
@@ -171,7 +171,14 @@
                 <ul class="team__item">
                     <li class="team__list">
 
-                        <img class="team__img" src="./images/igor.jpg" alt="перший член команди">
+                        <img class="team__img" src="./images/igor.jpg" alt="перший член команди" srcset="
+                            /images/team1/team-m-min.jpg   270w,
+                            /images/team1/team-xl-min.jpg  354w,
+                            /images/team1/team-xs-min.jpg  450w,
+                            /images/team1/team-l-min.jpg   540w,
+                            /images/team1/team-xxl-min.jpg 708w,
+                            /images/team1/team-s-min.jpg   900w
+                            " sizes="(min-width: 1200px) 25vw, (min-width: 768px) 50vw, 100vw">
                         <div class="team__descr">
                             <h3 class="team__name">Ігор Дем'яненко</h3>
                             <p class="team__profession" lang="en">Product Designer</p>
@@ -212,7 +219,14 @@
                         </div>
                     </li>
                     <li class="team__list">
-                        <img class="team__img" src="./images/olga.jpg" alt="другий член команди">
+                        <img class="team__img" src="./images/olga.jpg" alt="другий член команди" srcset="
+                            /images/team2/img-xl-min.jpg   270w,
+                            /images/team2/img-m-min.jpg  354w,
+                            /images/team2/img-xs-min.jpg  450w,
+                            /images/team2/img-l-min.jpg 708w,
+                            /images/team2/img-xxl-min.jpg   810w,
+                            /images/team2/img-s-min.jpg   900w
+                            " sizes="(min-width: 1200px) 25vw, (min-width: 768px) 50vw, 100vw">
                         <div class="team__descr">
                             <h3 class="team__name">Ольга Рєпіна</h3>
                             <p class="team__profession">Frontend Developer</p>
@@ -253,7 +267,14 @@
                         </div>
                     </li>
                     <li class="team__list">
-                        <img class="team__img" src="./images/mykola.jpg" alt="третій член команди">
+                        <img class="team__img" src="./images/mykola.jpg" alt="третій член команди" srcset="
+                            /images/team4/img-xl-min.jpg   270w,
+                            /images/team4/img-m-min.jpg    354w,
+                            /images/team4/img-xs-min.jpg   450w,
+                            /images/team4/img-l-min.jpg    708w,
+                            /images/team4/img-xxl-min.jpg   810w,
+                            /images/team4/img-s-min.jpg   900w
+                            " sizes="(min-width: 1200px) 25vw, (min-width: 768px) 50vw, 100vw">
                         <div class="team__descr">
                             <h3 class="team__name">Микола Тарасов</h3>
                             <p class="team__profession" lang="en">Marketing</p>
@@ -294,7 +315,14 @@
                         </div>
                     </li>
                     <li class="team__list">
-                        <img class="team__img" src="./images/mykhailo.jpg" alt="четвертий член команди">
+                        <img class="team__img" src="./images/mykhailo.jpg" alt="четвертий член команди" srcset="
+                            /images/team3/img-xl-min.jpg   270w,
+                            /images/team3/img-m-min.jpg  354w,
+                            /images/team3/img-xs-min.jpg  450w,
+                            /images/team3/img-l-min.jpg 708w,
+                            /images/team3/img-xxl-min.jpg   810w,
+                            /images/team3/img-s-min.jpg   900w
+                            " sizes="(min-width: 1200px) 25vw, (min-width: 768px) 50vw, 100vw">
                         <div class="team__descr">
                             <h3 class="team__name">Михайло Єрмаков</h3>
                             <p class="team__profession" lang="en">UI Designer</p>
