--- a/index.html
+++ b/index.html
@@ -542,7 +542,7 @@
                 <label class="custom__checkbox__label" for="text">
                     <span class="custom__checkbox__icon">
                         <svg class="custom__checkbox__svg" width="11" height="8">
-                            <use href="./images/sprite.svg#icon-Vector-6"></use>
+                            <use href="./images/sprite.svg#icon-checkbox-on"></use>
                         </svg>
                     </span>
                     <span class="custom__checkbox__text">Погоджуюся з розсилкою та
