--- a/index.html
+++ b/index.html
@@ -60,10 +60,10 @@
             <div class="burger">
                 <ul class="burger__nav">
                     <li class="burger__list">
-                        <a class="burger__link active">Студія</a>
+                        <a href="index.html" class="burger__link active">Студія</a>
                     </li>
                     <li class="burger__list">
-                        <a class="burger__link">Портфоліо</a>
+                        <a href="portfolio.html" class="burger__link">Портфоліо</a>
                     </li>
                     <li class="burger__list">
                         <a class="burger__link">Контакти</a>
