--- a/index.html
+++ b/index.html
@@ -94,6 +94,12 @@
                 <h1 class="hero__title">Ефективні рішення для вашого бізнесу</h1>
                 <button type="button" class="button__service" data-modal-open>Замовити послугу</button>
             </div>
+        </section><!-- Ефективні рішення для вашого бізнесу -->
+        <section class="interest hero">
+            <div class="container">
+                <h1 class="hero__title">Ефективні рішення для вашого бізнесу</h1>
+                <button type="button" class="button__service" data-modal-open>Замовити послугу</button>
+            </div>
         </section>
         <!-- Чим ми займаємося -->
         <section class="work__section">
